# agelapse

./: .flutter-plugins-dependencies  .flutter_distributor.yaml  .gitignore  LICENSE  README.md  analysis_options.yaml  ffmpeg-full-pipeline-test.md  installer.iss  perf-experiments.md  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json  version
agelapse-desktop/: AgeLapseWin.spec  README.md  macos-arm64.spec  macos-x86_64.spec  main.py  requirements.txt  windows.spec
agelapse-mobile/: .metadata  README.md  pubspec.yaml
agelapse_desktop/: macos.spec  main.py  requirements.txt  windows.spec
agelapse_mobile/: README.md  pubspec.yaml
android/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
docs/: DESIGN.md  ffmpeg-android-minimal-aar-research.md
flatpak/: README.md  agelapse.sh  build.sh  com.hugocornellier.agelapse.desktop  com.hugocornellier.agelapse.flathub.yaml  com.hugocornellier.agelapse.metainfo.xml  com.hugocornellier.agelapse.yaml  flathub.json  generate-hashes.sh
integration_test/: all_tests.dart  app_test.dart  cat_stabilization_test.dart  database_test.dart  desktop_fast.dart  desktop_video.dart  dog_stabilization_test.dart  e2e_pipeline_test.dart  e2e_workflow_test.dart  error_handling_test.dart  export_test.dart  face_detection_cache_benchmark_test.dart  ffmpeg_binary_test.dart  gallery_test.dart  image_format_test.dart  import_read_amplification_benchmark_test.dart  import_test.dart  linked_source_sync_test.dart  mobile_fast.dart  mobile_video.dart  multipass_benchmark_test.dart  screenshot_test.dart  (+15 more)
plugins/fast_thumbnail/linux/: CMakeLists.txt  fast_thumbnail_plugin.cc
plugins/fast_thumbnail/linux/include/fast_thumbnail/: fast_thumbnail_plugin.h
plugins/fast_thumbnail/windows/: CMakeLists.txt  fast_thumbnail_plugin.cpp  fast_thumbnail_plugin.h  fast_thumbnail_plugin_c_api.cpp
plugins/fast_thumbnail/windows/include/fast_thumbnail/: fast_thumbnail_plugin_c_api.h
(+658 files in other folders)
